kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
  - host: otus-frontend.109.173.124.189.nip.io
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 8080
        pathType: ImplementationSpecific
        path: /
  tls:
  - hosts:
    - otus-frontend.109.173.124.189.nip.io
    secretName: otus-frontend.109.173.124.189.nip.io
